--- a/package.json
+++ b/package.json
@@ -28,14 +28,14 @@
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
     "babel-eslint": "10.1.0",
-    "babel-loader": "^8.0.6",
+    "babel-loader": "8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "eslint": "6.8.0",
     "eslint-config-airbnb-base": "14.2.1",
     "eslint-plugin-import": "^2.22.1",
-    "file-loader": "^4.2.0",
-    "html-webpack-plugin": "^3.2.0",
-    "raw-loader": "^3.1.0",
+    "file-loader": "6.2.0",
+    "html-webpack-plugin": "4.5.1",
+    "raw-loader": "4.0.2",
     "stylelint": "13.3.x",
     "stylelint-config-standard": "20.0.x",
     "stylelint-csstree-validator": "^1.9.0",
