--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "A Phaser 3 Project Template",
   "main": "src/index.js",
   "scripts": {
-    "test": "npm run stylelint && npm run eslint && echo \"Passed ✅✅ No errors! 😁😁\"",
+    "test": "jest",
+    "lint": "npm run webhint && npm run stylelint && npm run eslint && echo \"Passed ✅✅ No errors! 😁😁\"",
     "build": "webpack --config webpack/prod.js ",
     "start": "webpack-dev-server --config webpack/base.js --open",
     "stylelint": "npx stylelint '**/*.{css,scss}'",
@@ -24,6 +25,25 @@
   "dependencies": {
     "phaser": "^3.51.0"
   },
+  "jest": {
+    "transform": {
+      "^.+\\.jsx?$": "babel-jest"
+    },
+    "setupFiles": [
+      "jest-canvas-mock"
+    ],
+    "setupFilesAfterEnv": [
+      "jest-expect-subclass"
+    ],
+    "moduleFileExtensions": [
+      "js",
+      "jsx"
+    ],
+    "moduleNameMapper": {
+      "\\.(css|less|sass|scss)$": "<rootDir>/test/mocks/styleMock.js",
+      "\\.(gif|ttf|eot|svg|png)$": "<rootDir>/test/mocks/fileMock.js"
+    }
+  },
   "devDependencies": {
     "@babel/core": "^7.7.2",
     "@babel/preset-env": "^7.7.1",
@@ -36,6 +56,9 @@
     "eslint-plugin-import": "^2.22.1",
     "file-loader": "6.2.0",
     "html-webpack-plugin": "4.5.1",
+    "jest": "^26.6.3",
+    "jest-canvas-mock": "^2.3.0",
+    "jest-expect-subclass": "^1.0.1",
     "raw-loader": "4.0.2",
     "stylelint": "13.3.x",
     "stylelint-config-standard": "20.0.x",
